no dependencies w/ bootstrap in footer

--- a/_layouts/website/_footer.html
+++ b/_layouts/website/_footer.html
@@ -1,7 +1,7 @@
 <div class="primary-nio-footer">
     <footer>
         <div class="links">
-            <div class="col-md-12 col-lg-4 contact-info">
+            <div class="footer__contact">
                 <div class="logos flex-wrap">
                     <a href="https://niolabs.com" class="footer__logo logo--niolabs">
                       <svg id="footer-logo" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1088 360" class="logo--nio">
@@ -33,41 +33,41 @@
                     <li>phone: 1.877.231.0353</li>
                 </ul>
             </div>
-            <div class="col-md-12 col-lg-8">
+            <div class="footer__menu">
                 <nav class="footer__container">
                     <ul id="menu-footer-menu" class="menu">
                         <li class="menu-item menu-company"><a>company</a>
                             <ul class="sub-menu">
-                                <li class="menu-item menu-partner"><a href="https://niolabs.com/partner/">partner</a></li>
-                                <li class="menu-item menu-team"><a href="https://niolabs.com/team/">team</a></li>
-                                <li class="menu-item menu-careers"><a href="https://niolabs.com/careers/">careers</a></li>
-                                <li class="menu-item menu-blog"><a href="https://niolabs.com/blog/">blog</a></li>
-                                <li class="menu-item menu-press"><a href="https://niolabs.com/press/">press</a></li>
-                                <li class="menu-item menu-contact"><a href="https://niolabs.com/contact/">contact</a></li>
+                                <li class="menu-item menu-partner"><a href="https://niolabs.com/partner/">Partner</a></li>
+                                <li class="menu-item menu-team"><a href="https://niolabs.com/team/">Team</a></li>
+                                <li class="menu-item menu-careers"><a href="https://niolabs.com/careers/">Careers</a></li>
+                                <li class="menu-item menu-blog"><a href="https://niolabs.com/blog/">Blog</a></li>
+                                <li class="menu-item menu-press"><a href="https://niolabs.com/press/">Press</a></li>
+                                <li class="menu-item menu-contact"><a href="https://niolabs.com/contact/">Contact us</a></li>
                             </ul>
                         </li>
                         <li class="menu-item menu-products"><a>products</a>
                             <ul class="sub-menu">
-                                <li class="menu-item menu-platform"><a href="https://niolabs.com/product/platform/">platform</a></li>
-                                <li class="menu-item menu-system-designer"><a href="https://niolabs.com/product/system-designer/">system designer</a></li>
-                                <li class="menu-item menu-pubkeeper"><a href="https://niolabs.com/product/pubkeeper/">pubkeeper</a></li>
-                                <li class="menu-item menu-blocks"><a href="https://niolabs.com/product/blocks/">blocks</a></li>
+                                <li class="menu-item menu-platform"><a href="https://niolabs.com/product/nio/">nio</a></li>
+                                <li class="menu-item menu-system-designer"><a href="https://niolabs.com/product/system-designer/">System Designer</a></li>
+                                <li class="menu-item menu-pubkeeper"><a href="https://niolabs.com/product/pubkeeper/">Pubkeeper</a></li>
+                                <li class="menu-item menu-blocks"><a href="https://niolabs.com/product/blocks/">Blocks</a></li>
                             </ul>
                         </li>
                         <li class="menu-item menu-tools"><a>tools</a>
                             <ul class="sub-menu">
-                                <li class="menu-item menu-go-to-designer"><a href="http://designer.n.io/">go to designer</a></li>
-                                <li class="menu-item"><a href="https://docs.n.io">docs</a></li>
-                                <li class="menu-item"><a href="https://workshops.n.io">workshop</a></li>
-                                <li class="menu-item"><a href="https://blocks.n.io">block library</a></li>
+                                <li class="menu-item menu-go-to-designer"><a href="https://designer.n.io/">Go to Designer</a></li>
+                                <li class="menu-item"><a href="https://docs.n.io">Docs</a></li>
+                                <li class="menu-item"><a href="https://workshops.n.io">Workshops</a></li>
+                                <li class="menu-item"><a href="https://blocks.n.io">Block library</a></li>
                             </ul>
                         </li>
                         <li class="menu-item menu-nio"><a>nio</a>
                             <ul class="sub-menu">
-                                <li class="menu-item"><a href="https://app.n.io/support">support</a></li>
-                                <li class="menu-item"><a href="https://app.n.io/support/faqs">faq</a></li>
-                                <li class="menu-item"><a href="https://app.n.io/support/contact">contact us</a></li>
-                                <li class="menu-item"><a href="https://app.n.io/settings">account</a></li>
+                                <li class="menu-item"><a href="https://app.n.io/support">Support</a></li>
+                                <li class="menu-item"><a href="https://app.n.io/support/faqs">FAQ</a></li>
+                                <li class="menu-item"><a href="https://app.n.io/support/contact">Contact us</a></li>
+                                <li class="menu-item"><a href="https://app.n.io/settings">Account</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -75,7 +75,7 @@
             </div>
         </div>
         <div class="copyright">
-            <a href="https://niolabs.com/privacy">privacy policy</a> | <a href="https://niolabs.com/terms">terms and conditions</a> | <a href="https://niolabs.com/legal">legal</a>
+            <a href="https://niolabs.com/privacy">Privacy Policy</a> | <a href="https://niolabs.com/terms">Terms and Conditions</a> | <a href="https://niolabs.com/legal">Legal</a>
             <br>
             <a href="https://docs.n.io/copyright.html">&copy; n.io innovation, LLC. All Rights Reserved.</a>
         </div>
