update header, footer, and style hamburger

--- a/_layouts/website/_footer.html
+++ b/_layouts/website/_footer.html
@@ -4,23 +4,19 @@
             <div class="footer__contact">
                 <div class="logos flex-wrap">
                     <a href="https://niolabs.com" class="footer__logo logo--niolabs">
-                      <svg id="footer-logo" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1088 360" class="logo--nio">
+                      <svg id="footer-logo" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1548 452" class="footer__logo">
                         <defs>
-                          <style>.cls-1,.cls-3{fill:#e6e9ee;}.cls-2{fill:#fff;}.cls-3{font-size:23px;font-family:ArialMT, Arial;}
-                          </style>
+                          <style>.cls-1{fill:#e6e9ee;}.cls-2{fill:#fff;}</style>
                         </defs>
-                        <title>niolabs logo light</title>
-                        <path class="cls-1" d="M513.3,89.3V299H477V89.3Z"/>
-                        <path class="cls-1" d="M662.7,151.1h35.1V299H663.3l-1.8-21.6c-8.4,17.4-31.5,25.8-48,26.1-43.8.3-76.2-26.7-76.2-78.6,0-51,33.9-77.7,77.1-77.4,19.8,0,38.7,9.3,47.1,24Zm-88.8,73.8c0,28.2,19.5,45,43.8,45,57.6,0,57.6-89.7,0-89.7C593.4,180.2,573.9,196.7,573.9,224.9Z"/>
-                        <path class="cls-1" d="M762.3,89.3v81.9c8.7-15.3,33-23.7,48.6-23.7,43.2,0,75.3,26.4,75.3,77.4,0,48.6-32.7,77.4-76.2,77.4-18,0-36.3-6-47.7-23.7L759.9,299H725.7V89.3Zm2.4,135.6c0,26.7,19.8,43.5,42.9,43.5,23.4,0,42-17.7,42-43.5,0-26.7-18.6-43.2-42-43.2C784.5,181.7,764.7,199.1,764.7,224.9Z"/>
-                        <path class="cls-1" d="M1009.8,190.4c-10.5-9.9-22.5-13.2-36.6-13.2-17.4,0-27,5.4-27,14.7,0,9.6,8.7,15,27.6,16.2,27.9,1.8,63.3,8.1,63.3,47.4,0,26.1-21.3,48.6-63.6,48.6-23.4,0-46.8-3.9-68.4-26.4l18-26.1c10.5,11.7,34.5,20.4,51,20.7,13.8.3,26.7-6.9,26.7-17.7,0-10.2-8.4-14.4-29.4-15.6-27.9-2.1-61.2-12.3-61.2-45.9,0-34.2,35.4-46.2,62.4-46.2,23.1,0,40.5,4.5,57.6,19.5Z"/>
-                        <path class="cls-2" d="M161.69,299.43V221.72c0-22.59-12.35-39.76-35.84-39.76-22.59,0-38,19-38,41.56v75.9H51.45V150.64H84.28l2.41,20.18c15.06-14.76,30.12-22.29,48.79-22.29,34.94,0,63,26.21,63,72.89v78Z"/>
-                        <path class="cls-2" d="M269,109.07c0,28.61-43.37,28.61-43.37,0S269,80.45,269,109.07ZM229,150.34V299.43h36.74V150.34Z"/>
-                        <path class="cls-2" d="M449.74,225.33c0,42.78-29.22,77.41-77.41,77.41s-77.11-34.63-77.11-77.41c0-42.47,29.52-77.41,76.81-77.41S449.74,182.87,449.74,225.33Zm-117.77,0c0,22.6,13.55,43.68,40.36,43.68s40.36-21.08,40.36-43.68c0-22.29-15.66-44-40.36-44C345.83,181.36,332,203,332,225.33Z"/>
-                        <text class="cls-3" transform="translate(1042.83 144.46)">™
-                        </text>
+                        <title>niolabs_logo_light</title>
+                        <path class="cls-1" d="M545,86.56V328.36H503.15V86.56Z"/>
+                        <path class="cls-1" d="M717.28,157.82h40.47V328.36H718l-2.08-24.91c-9.69,20.06-36.32,29.75-55.35,30.1-50.51.35-87.87-30.79-87.87-90.63,0-58.81,39.09-89.6,88.91-89.25,22.83,0,44.62,10.72,54.31,27.68Zm-102.4,85.1c0,32.52,22.49,51.89,50.51,51.89,66.42,0,66.42-103.43,0-103.43C637.37,191.37,614.89,210.4,614.89,242.92Z"/>
+                        <path class="cls-1" d="M832.13,86.56V181c10-17.64,38.05-27.33,56-27.33,49.81,0,86.83,30.44,86.83,89.25,0,56-37.71,89.25-87.87,89.25-20.76,0-41.86-6.92-55-27.33l-2.77,23.52H789.92V86.56Zm2.77,156.36c0,30.79,22.83,50.16,49.47,50.16,27,0,48.43-20.41,48.43-50.16,0-30.79-21.45-49.81-48.43-49.81C857.73,193.1,834.9,213.17,834.9,242.92Z"/>
+                        <path class="cls-1" d="M1117.52,203.14c-12.11-11.41-25.95-15.22-42.2-15.22-20.06,0-31.13,6.23-31.13,16.95,0,11.07,10,17.3,31.83,18.68,32.17,2.08,73,9.34,73,54.66,0,30.1-24.56,56-73.34,56-27,0-54-4.5-78.87-30.44l20.76-30.1c12.11,13.49,39.78,23.52,58.81,23.87,15.91.35,30.79-8,30.79-20.41,0-11.76-9.69-16.61-33.9-18-32.17-2.42-70.57-14.18-70.57-52.93,0-39.44,40.82-53.27,72-53.27,26.64,0,46.7,5.19,66.42,22.49Z"/>
+                        <path class="cls-2" d="M139.57,328.86V239.25c0-26-14.24-45.84-41.33-45.84-26.05,0-43.76,21.88-43.76,47.93v87.52h-42V157.29H50.31l2.78,23.27c17.37-17,34.73-25.71,56.26-25.71,40.29,0,72.59,30.22,72.59,84.05v90Z"/>
+                        <path class="cls-2" d="M263.33,109.35c0,33-50,33-50,0S263.33,76.36,263.33,109.35Zm-46.19,47.59V328.86h42.37V156.94Z"/>
+                        <path class="cls-2" d="M471.72,243.42c0,49.32-33.69,89.26-89.26,89.26s-88.91-39.94-88.91-89.26c0-49,34-89.26,88.57-89.26S471.72,194.45,471.72,243.42Zm-135.8,0c0,26.05,15.63,50.36,46.54,50.36S429,269.47,429,243.42c0-25.7-18.06-50.7-46.54-50.7C351.9,192.71,335.92,217.72,335.92,243.42Z"/>
                       </svg>
-
                     </a>
                     <a href="https://twitter.com/poweredbynio" target="_blank" class="social-icon"><span class="fa-stack fa-lg"><i class="fa fa-circle fa-stack-2x"></i> <i class="fa fa-twitter fa-stack-1x fa-inverse"></i></span></a>
                     <a href="https://www.linkedin.com/company/n-io" target="_blank" class="social-icon"><span class="fa-stack fa-lg"><i class="fa fa-circle fa-stack-2x"></i> <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i></span></a>
@@ -54,7 +50,7 @@
                                 <li class="menu-item menu-blocks"><a href="https://niolabs.com/product/blocks/">Blocks</a></li>
                             </ul>
                         </li>
-                        <li class="menu-item menu-tools"><a>tools</a>
+                        <li class="menu-item menu-tools"><a>build & learn</a>
                             <ul class="sub-menu">
                                 <li class="menu-item menu-go-to-designer"><a href="https://designer.n.io/">Go to Designer</a></li>
                                 <li class="menu-item"><a href="https://docs.n.io">Docs</a></li>
@@ -68,6 +64,7 @@
                                 <li class="menu-item"><a href="https://app.n.io/support/faqs">FAQ</a></li>
                                 <li class="menu-item"><a href="https://app.n.io/support/contact">Contact us</a></li>
                                 <li class="menu-item"><a href="https://app.n.io/settings">Account</a></li>
+                                <li class="menu-item"><a href="https://forum.n.io">Forum</a></li>
                             </ul>
                         </li>
                     </ul>
