--- a/_layouts/website/_header.html
+++ b/_layouts/website/_header.html
@@ -1,15 +1,14 @@
 <header class="header">
     <div class="header__container">
         <a href="https://app.n.io">
-          <svg id="nio_logo_white" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 674 402" class="header__logo">
+          <svg id="nio_logo_white" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 927 452" class="header__logo">
             <defs>
-              <style>.cls-1{fill:#fff;}
-              </style>
+              <style>.cls-1{fill:#fff;}</style>
             </defs>
-            <title>nio_logo_white</title>
-            <path class="cls-1" d="M253.69,293.43V215.72c0-22.59-12.35-39.76-35.84-39.76-22.59,0-38,19-38,41.56v75.9H143.45V144.64h32.83l2.41,20.18c15.06-14.76,30.12-22.29,48.79-22.29,34.94,0,63,26.21,63,72.89v78Z"/>
-            <path class="cls-1" d="M361,103.07c0,28.61-43.37,28.61-43.37,0S361,74.45,361,103.07ZM321,144.34V293.43h36.74V144.34Z"/>
-            <path class="cls-1" d="M541.74,219.33c0,42.78-29.22,77.41-77.41,77.41s-77.11-34.63-77.11-77.41c0-42.47,29.52-77.41,76.81-77.41S541.74,176.87,541.74,219.33Zm-117.77,0c0,22.6,13.55,43.68,40.36,43.68s40.36-21.08,40.36-43.68c0-22.29-15.66-44-40.36-44C437.83,175.36,424,197,424,219.33Z"/>
+            <title>nio_logo_light</title>
+            <path class="cls-1" d="M166,357.37V244.6c0-32.78-17.92-57.7-52-57.7-32.78,0-55.08,27.54-55.08,60.32V357.37H6V141.44H53.64l3.5,29.28C79,149.31,100.85,138.38,128,138.38c50.7,0,91.35,38,91.35,105.78V357.37Z" />
+            <path class="cls-1" d="M321.74,81.12c0,41.52-62.94,41.52-62.94,0S321.74,39.59,321.74,81.12ZM263.61,141V357.37h53.32V141Z" />
+            <path class="cls-1" d="M584,249.84c0,62.07-42.4,112.33-112.33,112.33s-111.9-50.26-111.9-112.33c0-61.63,42.83-112.33,111.46-112.33S584,188.21,584,249.84Zm-170.9,0c0,32.79,19.67,63.38,58.57,63.38s58.57-30.59,58.57-63.38c0-32.34-22.73-63.81-58.57-63.81C433.2,186,413.1,217.49,413.1,249.84Z" />
           </svg>
         </a>
         <input id="header__toggle" type="checkbox" class="header__toggle" />
