--- a/_layouts/website/_footer.html
+++ b/_layouts/website/_footer.html
@@ -2,7 +2,7 @@
     <footer>
         <div class="links">
             <div class="footer__contact">
-                <div class="logos flex-wrap">
+                <div class="logos">
                     <a href="https://niolabs.com" class="footer__logo logo--niolabs">
                       <svg id="footer-logo" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1088 360" class="logo--nio">
                         <defs>
@@ -22,11 +22,14 @@
                       </svg>
 
                     </a>
-                    <a href="https://twitter.com/poweredbynio" target="_blank" class="social-icon"><span class="fa-stack fa-lg"><i class="fa fa-circle fa-stack-2x"></i> <i class="fa fa-twitter fa-stack-1x fa-inverse"></i></span></a>
-                    <a href="https://www.linkedin.com/company/n-io" target="_blank" class="social-icon"><span class="fa-stack fa-lg"><i class="fa fa-circle fa-stack-2x"></i> <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i></span></a>
-                    <a href="https://www.facebook.com/poweredbynio" target="_blank" class="social-icon"><span class="fa-stack fa-lg"><i class="fa fa-circle fa-stack-2x"></i> <i class="fa fa-facebook fa-stack-1x fa-inverse"></i></span></a>
-                    <a href="https://www.youtube.com/nioinnovation" target="_blank" class="social-icon"><span class="fa-stack fa-lg"><i class="fa fa-circle fa-stack-2x"></i> <i class="fa fa-youtube fa-stack-1x fa-inverse"></i></span></a>
-                    <a href="https://github.com/niolabs" target="_blank" class="social-icon"><span class="fa-stack fa-lg"><i class="fa fa-circle fa-stack-2x"></i> <i class="fa fa-github fa-stack-1x fa-inverse"></i></span></a>
+                    <div class="social-icon-container">
+                      <a href="https://twitter.com/poweredbynio" target="_blank" class="social-icon"><span class="fa-stack fa-lg"><i class="fa fa-circle fa-stack-2x"></i> <i class="fa fa-twitter fa-stack-1x fa-inverse"></i></span></a>
+                      <a href="https://www.linkedin.com/company/n-io" target="_blank" class="social-icon"><span class="fa-stack fa-lg"><i class="fa fa-circle fa-stack-2x"></i> <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i></span></a>
+                      <a href="https://www.facebook.com/poweredbynio" target="_blank" class="social-icon"><span class="fa-stack fa-lg"><i class="fa fa-circle fa-stack-2x"></i> <i class="fa fa-facebook fa-stack-1x fa-inverse"></i></span></a>
+                      <a href="https://plus.google.com/+nioinnovation" target="_blank" class="social-icon"><span class="fa-stack fa-lg"><i class="fa fa-circle fa-stack-2x"></i><i class="fa fa-google-plus fa-stack-1x fa-inverse"></i></span></a>
+                      <a href="https://www.youtube.com/nioinnovation" target="_blank" class="social-icon"><span class="fa-stack fa-lg"><i class="fa fa-circle fa-stack-2x"></i> <i class="fa fa-youtube fa-stack-1x fa-inverse"></i></span></a>
+                      <a href="https://github.com/niolabs" target="_blank" class="social-icon"><span class="fa-stack fa-lg"><i class="fa fa-circle fa-stack-2x"></i> <i class="fa fa-github fa-stack-1x fa-inverse"></i></span></a>
+                    </div>
                 </div>
                 <ul>
                     <li>295 Interlocken Blvd. Suite 500 Broomfield, CO 80021</li>
