--- a/book/scss/style.scss
+++ b/book/scss/style.scss
@@ -261,8 +261,16 @@ $border-radius: 7px;
     font-size: 11px;
   }
   table {
-    th {
-      text-align: left;
+    thead {
+      tr {
+        background-color: $palette-snow;
+      }
+      th {
+        text-align: left;
+      }
+    }
+    tr:nth-child(2n) {
+      background-color: #fff;
     }
   }
   ul {
