--- a/book/scss/style.scss
+++ b/book/scss/style.scss
@@ -80,6 +80,7 @@ $border-radius: 7px;
   max-height: 1050px;
   .accordionContent {
     max-height: 1000px;
+    @media print { max-height: unset; }
   }
   .accordionButton {
     background-color: $palette-slate;
@@ -101,6 +102,7 @@ $border-radius: 7px;
 
 .accordionClose {
   max-height: 32px;
+  @media print { max-height: unset; }
 }
 
 .page-toc {
