add sentence case to header, footer, and sidebar

--- a/_layouts/website/_footer.html
+++ b/_layouts/website/_footer.html
@@ -29,7 +29,7 @@
                 </div>
                 <ul>
                     <li>295 Interlocken Blvd. Suite 500 Broomfield, CO 80021</li>
-                    <li>phone: 1.877.231.0353</li>
+                    <li>Phone: 1.877.231.0353</li>
                 </ul>
             </div>
             <div class="footer__menu">
