--- a/_layouts/website/_header.html
+++ b/_layouts/website/_header.html
@@ -16,16 +16,16 @@
         <nav class="nav">
             <ul class="nav__list list-unstyled">
                 <li class="nav__list--item">
-                    <a id="nav__list--docs" href="https://docs.n.io" class="nav__list--anchor">docs</a>
+                    <a id="nav__list--docs" href="https://docs.n.io" class="nav__list--anchor">Docs</a>
                 </li>
                 <li class="nav__list--item">
-                    <a id="nav__list--blocks" href="https://blocks.n.io" class="nav__list--anchor">blocks</a>
+                    <a id="nav__list--blocks" href="https://blocks.n.io" class="nav__list--anchor">Blocks</a>
                 </li>
                 <li class="nav__list--item">
-                    <a id="nav__list--workshop" href="https://workshops.n.io" class="nav__list--anchor">workshops</a>
+                    <a id="nav__list--workshop" href="https://workshops.n.io" class="nav__list--anchor">Workshops</a>
                 </li>
                 <li class="nav__list--item">
-                    <a id="nav__list--support" href="https://app.n.io/support" class="nav__list--anchor">support</a>
+                    <a id="nav__list--support" href="https://app.n.io/support" class="nav__list--anchor">Support</a>
                     <!-- Mobile Sub-Navigation Toggle -->
                     <input class="nav-item__toggle" id="sub-nav__support" type="checkbox" />
                     <label class="nav-item__toggle--label" for="sub-nav__support">
@@ -34,15 +34,15 @@
                     </label>
                     <!-- Sub-Navigation -->
                     <ul class="sub-nav list-unstyled">
-                        <li class="sub-nav__item"><a href="https://forum.n.io" class="sub-nav__item--anchor">forum</a></li>
-                        <li class="sub-nav__item"><a href="https://app.n.io/support/faqs" class="sub-nav__item--anchor">faqs</a></li>
-                        <li class="sub-nav__item"><a href="https://app.n.io/support/contact" class="sub-nav__item--anchor">contact us</a></li>
+                        <li class="sub-nav__item"><a href="https://forum.n.io" class="sub-nav__item--anchor">Forum</a></li>
+                        <li class="sub-nav__item"><a href="https://app.n.io/support/faqs" class="sub-nav__item--anchor">FAQs</a></li>
+                        <li class="sub-nav__item"><a href="https://app.n.io/support/contact" class="sub-nav__item--anchor">Contact us</a></li>
                     </ul>
                 </li>
                 <li class="nav__list--item nav__list--item--settings">
                     <a href="https://app.n.io/settings" class="nav__list--anchor">
                         <i class="nio nio-profile"></i>
-                        <span>settings</span>
+                        <span>Settings</span>
                     </a>
                 </li>
                 <li class="nav__list--item nav__list--item--designer">
@@ -51,7 +51,7 @@
                     go to designer
                   </button>
                   </a>
-                  <span>go to designer (only available on desktop)</span>
+                  <span>Go to Designer (only available on desktop)</span>
                 </li>
             </ul>
         </nav>
