--- a/_layouts/website/_footer.html
+++ b/_layouts/website/_footer.html
@@ -61,7 +61,7 @@
                                 <li class="menu-item"><a href="https://blocks.n.io">Block library</a></li>
                             </ul>
                         </li>
-                        <li class="menu-item menu-nio"><a>nio</a>
+                        <li class="menu-item menu-nio"><a>nio platform</a>
                             <ul class="sub-menu">
                                 <li class="menu-item"><a href="https://app.n.io/support">Support</a></li>
                                 <li class="menu-item"><a href="https://app.n.io/support/faqs">FAQ</a></li>
