--- a/book/scss/style.scss
+++ b/book/scss/style.scss
@@ -171,27 +171,29 @@ $border-radius: 7px;
   }
   h2 {
     @extend %nio-h2;
-    font-size: 28px;
+    font-size: 36px;
     font-weight: 300;
-    line-height: 38px;
+    line-height: 46px;
+    color: $palette-primary;
   }
   h3 {
     @extend %nio-h3;
-    font-size: 22px;
+    font-size: 28px;
     font-weight: 400;
-    line-height: 32px;
+    line-height: 36px;
+    color: $palette-primary;
   }
   h4 {
     @extend %nio-h4;
-    font-size: 18px;
+    font-size: 22px;
     font-weight: 400;
-    line-height: 28px;
+    line-height: 30px;
   }
   h5 {
     @extend %nio-h5;
-    font-size: 16px;
+    font-size: 18px;
     font-weight: 300;
-    line-height: 26px;
+    line-height: 25px;
   }
   h6 {
     @extend %nio-h6;
