--- a/_layouts/website/_footer.html
+++ b/_layouts/website/_footer.html
@@ -47,7 +47,7 @@
                         </li>
                         <li class="menu-item menu-products"><a>products</a>
                             <ul class="sub-menu">
-                                <li class="menu-item menu-platform"><a href="https://niolabs.com/product/nio/">nio</a></li>
+                                <li class="menu-item menu-platform"><a href="https://niolabs.com/product/nio-platform/">nio platform</a></li>
                                 <li class="menu-item menu-system-designer"><a href="https://niolabs.com/product/system-designer/">System Designer</a></li>
                                 <li class="menu-item menu-pubkeeper"><a href="https://niolabs.com/product/pubkeeper/">Pubkeeper</a></li>
                                 <li class="menu-item menu-blocks"><a href="https://niolabs.com/product/blocks/">Blocks</a></li>
