replace hamburger icon with chevrons

--- a/book/scss/style.scss
+++ b/book/scss/style.scss
@@ -73,6 +73,9 @@ $border-radius: 7px;
       color: $palette-primary;
     }
   }
+  h1 {
+    visibility: hidden;
+  }
 }
 
 // custom active styles on sidebar
