change page-header to new mobile TOC toggle

--- a/_layouts/website/page.html
+++ b/_layouts/website/page.html
@@ -11,6 +11,7 @@
   {% include "./_header.html" %}
 
   {{ super() }}
+  <div class="custom-book-header-content">View all topics</div>
 
   {% include "./_footer.html" %}
   {% include "./_quantum.html" %}
