--- a/book/scss/style.scss
+++ b/book/scss/style.scss
@@ -83,6 +83,10 @@ $border-radius: 7px;
   max-height: 0;
   left: 0;
   transition: max-height 300ms;
+  @media (min-width: 600px) {
+    max-height: unset;
+    transition: none;
+  }
 }
 
 .with-summary > .book-summary {
@@ -90,10 +94,19 @@ $border-radius: 7px;
   overflow-y: scroll;
   left: 0;
   transition: max-height 300ms;
+  @media (min-width: 600px) {
+    max-height: unset;
+    transition: none;
+  }
 }
 
 .book-body {
   transition: none;
+  @media (min-width: 600px) {
+    max-height: unset;
+    transition: unset;
+    left: 300px;
+  }
 }
 
 // custom active styles on sidebar
@@ -111,12 +124,15 @@ $border-radius: 7px;
       line-height: 22.5px;
       &.active,
       &.active--chapter {
-        &.animating ul.articles {
-          max-height: 0;
-        }
-        ul.articles {
-          max-height: 600px;
-          transition: max-height 1000ms;
+        @media (min-width: 600px) {
+          &.animating ul.articles {
+            max-height: 0;
+          }
+          ul.articles {
+            height: unset;
+            max-height: 600px;
+            transition: max-height 1000ms;
+          }
         }
       }
       &.active--chapter > a {
@@ -170,10 +186,12 @@ $border-radius: 7px;
         }
       }
       ul.articles {
-        max-height: 0;
         overflow: hidden;
         padding-left: 0;
         transition: max-height 1000ms;
+        @media (min-width: 600px) {
+          max-height: 0;
+        }
         a {
           padding-left: 5rem;
           font-size: 16px;
