switch chevron direction, clean up

--- a/book/scss/style.scss
+++ b/book/scss/style.scss
@@ -380,7 +380,7 @@ $border-radius: 7px;
   }
 }
 
-.fa.fa-chevron-up {
+.fa.fa-chevron-down {
   color: $palette-zinc;
   &--rotate180 {
     transform: rotate(180deg);
