--- a/book/scss/style.scss
+++ b/book/scss/style.scss
@@ -418,7 +418,7 @@ $border-radius: 7px;
   position: relative;
   top: -4.5rem;
   left: 80%;
-  background-image: url(img/search-placeholder.svg);
+  background-image: url(img/search-icon.svg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: 2rem;
