--- a/_layouts/website/_header.html
+++ b/_layouts/website/_header.html
@@ -1,59 +1,64 @@
-<header class="header">
-    <div class="header__container">
-        <a href="https://app.n.io">
-          <svg id="nio_logo_white" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 927 452" class="header__logo">
-            <defs>
-              <style>.cls-1{fill:#fff;}</style>
-            </defs>
-            <title>nio_logo_light</title>
-            <path class="cls-1" d="M166,357.37V244.6c0-32.78-17.92-57.7-52-57.7-32.78,0-55.08,27.54-55.08,60.32V357.37H6V141.44H53.64l3.5,29.28C79,149.31,100.85,138.38,128,138.38c50.7,0,91.35,38,91.35,105.78V357.37Z" />
-            <path class="cls-1" d="M321.74,81.12c0,41.52-62.94,41.52-62.94,0S321.74,39.59,321.74,81.12ZM263.61,141V357.37h53.32V141Z" />
-            <path class="cls-1" d="M584,249.84c0,62.07-42.4,112.33-112.33,112.33s-111.9-50.26-111.9-112.33c0-61.63,42.83-112.33,111.46-112.33S584,188.21,584,249.84Zm-170.9,0c0,32.79,19.67,63.38,58.57,63.38s58.57-30.59,58.57-63.38c0-32.34-22.73-63.81-58.57-63.81C433.2,186,413.1,217.49,413.1,249.84Z" />
-          </svg>
-        </a>
-        <input id="header__toggle" type="checkbox" class="header__toggle" />
-        <label for="header__toggle" class="header__toggle--label"></label>
-        <nav class="nav">
-            <ul class="nav__list list-unstyled">
-                <li class="nav__list--item">
-                    <a id="nav__list--docs" href="https://docs.n.io" class="nav__list--anchor">Docs</a>
-                </li>
-                <li class="nav__list--item">
-                    <a id="nav__list--blocks" href="https://blocks.n.io" class="nav__list--anchor">Blocks</a>
-                </li>
-                <li class="nav__list--item">
-                    <a id="nav__list--workshop" href="https://workshops.n.io" class="nav__list--anchor">Workshops</a>
-                </li>
-                <li class="nav__list--item">
-                    <a id="nav__list--support" href="https://app.n.io/support" class="nav__list--anchor">Support</a>
-                    <!-- Mobile Sub-Navigation Toggle -->
-                    <input class="nav-item__toggle" id="sub-nav__support" type="checkbox" />
-                    <label class="nav-item__toggle--label" for="sub-nav__support">
-                        <i class="nio nio-add default"></i>
-                        <i class="nio nio-minus checked"></i>
-                    </label>
-                    <!-- Sub-Navigation -->
-                    <ul class="sub-nav list-unstyled">
-                        <li class="sub-nav__item"><a href="https://forum.n.io" class="sub-nav__item--anchor">Forum</a></li>
-                        <li class="sub-nav__item"><a href="https://app.n.io/support/faqs" class="sub-nav__item--anchor">FAQs</a></li>
-                        <li class="sub-nav__item"><a href="https://app.n.io/support/contact" class="sub-nav__item--anchor">Contact us</a></li>
-                    </ul>
-                </li>
-                <li class="nav__list--item nav__list--item--settings">
-                    <a href="https://app.n.io/settings" class="nav__list--anchor">
-                        <i class="nio nio-profile"></i>
-                        <span>Settings</span>
-                    </a>
-                </li>
-                <li class="nav__list--item nav__list--item--designer">
-                  <a href="https://designer.n.io" target="_blank">
-                  <button class="n-button n-button--primary">
-                    go to designer
-                  </button>
-                  </a>
-                  <span>Go to Designer (only available on desktop)</span>
-                </li>
-            </ul>
-        </nav>
+<header id="header" class="header">
+  <div class="header__container">
+    <!-- Logo & Mobile Notifications and Navigation Toggle -->
+    <a href="https://app.n.io">
+      <img src="data:image/svg+xml,%3Csvg id='logo_light' data-name='logo light' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 927 452'%3E%3Cdefs%3E%3Cstyle%3E.cls-1%7Bfill:%23fff%3B%7D%3C/style%3E%3C/defs%3E%3Ctitle%3Enio_logo_light%3C/title%3E%3Cpath class='cls-1' d='M166%2C357.37V244.6c0-32.78-17.92-57.7-52-57.7-32.78%2C0-55.08%2C27.54-55.08%2C60.32V357.37H6V141.44H53.64l3.5%2C29.28C79%2C149.31%2C100.85%2C138.38%2C128%2C138.38c50.7%2C0%2C91.35%2C38%2C91.35%2C105.78V357.37Z'/%3E%3Cpath class='cls-1' d='M321.74%2C81.12c0%2C41.52-62.94%2C41.52-62.94%2C0S321.74%2C39.59%2C321.74%2C81.12ZM263.61%2C141V357.37h53.32V141Z'/%3E%3Cpath class='cls-1' d='M584%2C249.84c0%2C62.07-42.4%2C112.33-112.33%2C112.33s-111.9-50.26-111.9-112.33c0-61.63%2C42.83-112.33%2C111.46-112.33S584%2C188.21%2C584%2C249.84Zm-170.9%2C0c0%2C32.79%2C19.67%2C63.38%2C58.57%2C63.38s58.57-30.59%2C58.57-63.38c0-32.34-22.73-63.81-58.57-63.81C433.2%2C186%2C413.1%2C217.49%2C413.1%2C249.84Z'/%3E%3C/svg%3E" class="header__logo" />
+    </a>
+    <!-- Notifications—go find .header__notifications in the css and change it to visibility:hidden all the way to header__toggle -->
+    <div class="header__notifications">
     </div>
+
+    <input class="header__toggle" id="header__toggle" type="checkbox" />
+    <label for="header__toggle" class="header__toggle--label"></label>
+
+    <!-- Primary Navigation -->
+    <nav class="nav">
+      <ul class="nav__list list-unstyled">
+        <li class="nav__list--item">
+          <a id="nav__list--docs" href="https://docs.n.io" class="nav__list--anchor">Docs</a>
+        </li>
+        <li class="nav__list--item">
+          <a id="nav__list--blocks" href="https://blocks.n.io" class="nav__list--anchor">Blocks</a>
+        </li>
+        <li class="nav__list--item">
+          <a id="nav__list--workshop" href="https://workshops.n.io" class="nav__list--anchor">Workshops</a>
+        </li>
+        <li class="nav__list--item">
+          <a id="nav__list--support" href="https://app.n.io/support" class="nav__list--anchor">
+            Support
+          </a>
+          <!-- Mobile Sub-Navigation Toggle -->
+          <input class="nav-item__toggle" id="sub-nav__support" type="checkbox" />
+          <label class="nav-item__toggle--label" for="sub-nav__support">
+            <i class="nio nio-add default"></i>
+            <i class="nio nio-minus checked"></i>
+          </label>
+          <!-- Sub-Navigation -->
+          <ul class="sub-nav list-unstyled">
+            <li class="sub-nav__item"><a href="https://forum.n.io" class="sub-nav__item--anchor">Forum</a></li>
+            <li class="sub-nav__item"><a href="https://app.n.io/support/faqs" class="sub-nav__item--anchor">FAQs</a></li>
+            <li class="sub-nav__item"><a href="https://app.n.io/support/contact" class="sub-nav__item--anchor">Contact us</a></li>
+          </ul>
+        </li>
+        <!-- Notifications—go find .nav__list--item.nav__list--item--notifications and make it visibility:hidden all the way to .nav__list--item--settings .nio-profile -->
+        <li class="nav__list--item nav__list--item--notifications">
+        </li>
+        <!-- Account Settings -->
+        <li class="nav__list--item nav__list--item--settings">
+          <a href="https://app.n.io/settings" class="nav__list--anchor">
+            <i class="nio nio-profile"></i>
+            <span>Settings</span>
+          </a>
+        </li>
+        <li class="nav__list--item nav__list--item--designer">
+          <a href="https://designer.n.io" target="_blank">
+          <button class="n-button n-button--primary">
+            go to designer
+          </button>
+          </a>
+          <span>go to designer (only available on desktop)</span>
+        </li>
+      </ul>
+    </nav>
+  </div>
 </header>
