sentence case mobile menu go to designer

--- a/_layouts/website/_header.html
+++ b/_layouts/website/_header.html
@@ -55,7 +55,7 @@
             go to designer
           </button>
           </a>
-          <span>go to designer (only available on desktop)</span>
+          <span>Go to designer (only available on desktop)</span>
         </li>
       </ul>
     </nav>
