--- a/book/header.css
+++ b/book/header.css
@@ -255,7 +255,7 @@
 }
 @media (min-width: 1200px) {
   .nav__list--item--designer a {
-    display: initial;
+    display: inherit;
   }
   .nav__list--item--designer span {
     display: none;
