--- a/_layouts/website/page.html
+++ b/_layouts/website/page.html
@@ -13,7 +13,12 @@
   {{ super() }}
   <div class="custom-book-header-content">View all topics</div>
 
-  {% include "./_footer.html" %}
   {% include "./_quantum.html" %}
+
+{% endblock %}
+
+{% block book_inner %}
+  {{ super() }}
+  {% include "./_footer.html" %}
 
 {% endblock %}
