reduce the line-height of inner articles and chapters

--- a/book/scss/style.scss
+++ b/book/scss/style.scss
@@ -202,8 +202,10 @@ $border-radius: 7px;
           font-weight: 400;
         }
         li.chapter {
+          line-height: 1;
           ul.articles {
             li.chapter {
+              line-height: 1;
               a {
                 padding-left: 7rem;
               }
